# fidlcrs

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  errors.rs  flat.rs  flatten.rs  grammar.lalrpop  ir.rs  lexer.rs  main.rs  parser.rs  raw.rs  source_file.rs  span.rs  token.rs  typeshape.rs
src/flat/: errors.rs  mod.rs  resolve.rs  tree.rs  validate.rs  visitor.rs
src/flat/resolve/: errors.rs  mod.rs  visitor.rs
src/flat/validate/: errors.rs  eval.rs  kindcheck.rs  mod.rs  typecheck.rs  visitor.rs
src/raw/: attributes.rs  errors.rs  mod.rs  tree.rs  validate.rs
testdata/: ambiguous_2.fidl  ambiguous_3.fidl  bad_attr_key.fidl  bad_library_name.fidl  bad_number_prefix.fidl  bar.fidl  bitsenums.fidl  can_be_pointer.fidl  cycle.fidl  depnotfound.fidl  dupe_attr.fidl  dupe_import.fidl  dupe_members.fidl  empty_union.fidl  foo.fidl  handles.fidl  import_conflict.fidl  import_conflict2.fidl  ir.fidl  kinderrors.fidl  misc.fidl  non_dense.fidl  nullable_member.fidl  oob_ordinal.fidl  recurse.fidl  sorterror.fidl  typeerror.fidl  undef_compound.fidl  undef_const.fidl  undef_type.fidl  unrecognized_token.fidl  unterminated_string.fidl  unused_import.fidl
testdata/ambiguous_3/: foobar.fidl
testdata/ambiguous_4/: conflict.fidl  foo.fidl  foobar.fidl
testdata/conflicting_libattrs/: foo.fidl  foo2.fidl
testdata/conflicting_libnames/: bar.fidl  foo.fidl
testdata/dupe_defs/: foo2.fidl
